minor alignment issues fixed

--- a/pages/components/DesignGallery/DesignGallery.module.scss
+++ b/pages/components/DesignGallery/DesignGallery.module.scss
@@ -1,24 +1,26 @@
 .heading{
-font-family: "Montserrat";
-font-size: 28px;
-font-weight: 700;
-line-height: 59px;
-letter-spacing: 0em;
-text-align: left;
-text-align: center;
+  font-family: "Montserrat";
+  font-size: 2.5em;
+  font-weight: 700;
+  line-height: 59px;
+  letter-spacing: 0em;
+  text-align: center;
 }
 .filter_home1 a{
-  font-family: 'Montserrat',sans-serif;
+  font-family: "Montserrat", sans-serif;
   color: #B7B7B7;
   text-decoration: none;
-  font-size: 16px;
+  font-size: 1em;
 }
 .paraheading{
-font-family: "Montserrat";
-font-size: 12px;
-font-weight: 400;
-letter-spacing: 0em;
-text-align: center;
+  font-family: "Montserrat";
+  font-size: 1.25em;
+  font-weight: 400;
+  letter-spacing: 0em;
+  line-height: 1em;
+  color: #727272;
+  text-align: center;
+  margin-bottom: 2vw;
 }
 .division{
   width: 90%;
@@ -32,7 +34,6 @@ text-align: center;
   font-size: 20px;
   line-height: 39px;
   color: #222222;
-  padding-left: 20px;
   display: flex;
 }
 .filter_home1 {
@@ -40,9 +41,7 @@ text-align: center;
  text-align: center;
 }
 .filter_link_span1 {
-
-  font-size: 12px;
-
+  font-size: 1em;
 }
 .customimage > img {
   border-radius: 20px;
