--- a/pages/components/MeetDesigner/ideas.module.scss
+++ b/pages/components/MeetDesigner/ideas.module.scss
@@ -3,7 +3,7 @@
     height: 100px;
     background: #2552A4;
     padding-top: 1%;
-    margin-bottom: 14%;
+    margin-bottom: 8%;
 }
 .redComponent{
     width: 100vw;
